# trident

./: .gitignore  CMakeLists.txt  README.md
include/layers/: TridentLayer.hpp
include/python/: trident.h
include/snap/: analytics.h  directed.h  nativetasks.h  readers.h  tasks.h  tedge.h  tnode.h  tunode.h  undirected.h
include/trident/: loader.h
include/trident/analytics/: analytics.h  nativetasks.h
include/trident/binarytables/: binarytableinserter.h  binarytablereaders.h  clustertableinserter.h  columntableinserter.h  factorytables.h  fileindex.h  newclustertable.h  newclustertableinserter.h  newcolumntable.h  newcolumntableinserter.h  newrowtable.h  newrowtableinserter.h  newtable.h  rowtableinserter.h  storagestrat.h  tableshandler.h
include/trident/files/: comprfiledescriptor.h  filedescriptor.h  filemanager.h
include/trident/iterators/: aggritr.h  arrayitr.h  cacheitr.h  compositeitr.h  compositescanitr.h  compositetermitr.h  diff1itr.h  diffscanitr.h  difftermitr.h  emptyitr.h  filtersameitr.h  pairitr.h  reorderitr.h  reordertermitr.h  rmcompositetermitr.h  rmitr.h  scanitr.h  termitr.h  tupleiterators.h
include/trident/kb/: cacheidx.h  consts.h  dictmgmt.h  diffindex.h  inserter.h  kb.h  kbconfig.h  memoryopt.h  partial.h  permsorter.h  querier.h  schema.h  statistics.h  updater.h  updatestats.h
include/trident/mining/: miner.h
include/trident/ml/: batch.h  distmul.h  distmultester.h  embeddings.h  faisswrapper.h  feedback.h  graddebug.h  hole.h  holetester.h  learner.h  pairwiselearner.h  subgraphhandler.h  subgraphs.h  tester.h  trainworkflow.h  transe.h  transebinarytester.h  transetester.h
include/trident/model/: model.h  table.h  term.h  tuple.h
include/trident/server/: server.h
include/trident/sparql/: aggrhandler.h  filter.h  joinplan.h  joins.h  plan.h  query.h  resultprinter.h  sparql.h  sparqloperators.h  tuplekbiterator.h
include/trident/tests/: common.h  timings.h
include/trident/tree/: cache.h  coordinates.h  flatroot.h  flattreeitr.h  intermediatenode.h  leaf.h  leaffactory.h  node.h  nodemanager.h  root.h  stringbuffer.h  treecontext.h  treeitr.h
include/trident/utils/: batch.h  fft.h  httpclient.h  httpserver.h  json.h  kiss_fft.h  memoryfile.h  memorymgr.h  parallel.h  propertymap.h  tridentutils.h
rdf3x/: makefile
rdf3x/include/: dblayer.hpp
rdf3x/src/: main_sparql.cpp
rdf3x/src/cts/: CodeGen.cpp  Plan.cpp  PlanGen.cpp  QueryGraph.cpp  SPARQLLexer.cpp  SPARQLParser.cpp  SemanticAnalysis.cpp
rdf3x/src/infra/: Thread.cpp
rdf3x/src/rts/: AggrFunctions.cpp  AggregatedIndexScan.cpp  Assignment.cpp  CartProd.cpp  DomainDescription.cpp  DuplLimit.cpp  EmptyScan.cpp  Filter.cpp  FullyAggregatedIndexScan.cpp  GroupBy.cpp  HashGroupify.cpp  HashJoin.cpp  IndexScan.cpp  LocalMakefile  MergeJoin.cpp  MergeUnion.cpp  Minus.cpp  NestedLoopFilter.cpp  NestedLoopJoin.cpp  PlanPrinter.cpp  ResultsPrinter.cpp  Runtime.cpp  Selection.cpp  SingletonScan.cpp  Sort.cpp  TableFunction.cpp  TemporaryDictionary.cpp  Union.cpp  ValuesScan.cpp
scripts/: Read Subgraph Embeddings-DAS5.ipynb  Read Subgraph Embeddings.ipynb  Read+Subgraph+Embeddings-DAS5.py  batch_to_python.py
scripts/docker/: update_and_make.sh
snap/: Makefile  Makefile.config
snap/glib-core/: bd.cpp  bd.h  ds.h  dt.cpp  dt.h  tm.cpp
snap/snap-core/: Makefile  bfsdfs.h  bignet.h  centr.cpp  centr.h  gbase.h  randwalk.h  table.cpp  triad.cpp  triad.h  util.cpp
src/client/: main.cpp  main_ml.cpp  main_params.cpp  main_sparql.cpp
src/layers/: TridentLayer.cpp
src/mining/: main.cpp  miner.cpp
src/python/: analytics.cpp  analytics.cpp.bak  batcher.cpp  embeddings.cpp  itr.cpp  trident.cpp
src/snap/: analytics.cpp  directed.cpp  nativetasks.cpp  readers.cpp  tasks.cpp  undirected.cpp
src/trident/analytics/: nativetasks.cpp
src/trident/binarytables/: binarytableinserter.cpp  clustertableinserter.cpp  columntableinserter.cpp  fileindex.cpp  newclustertableinserter.cpp  newcolumntable.cpp  newcolumntableinserter.cpp  newrowtableinserter.cpp  rowtableinserter.cpp  storagestrat.cpp  tableshandler.cpp
src/trident/files/: filedescriptor.cpp
src/trident/iterators/: aggritr.cpp  arrayitr.cpp  cacheitr.cpp  compositeitr.cpp  compositescanitr.cpp  compositetermitr.cpp  diffscanitr.cpp  difftermitr.cpp  reorderitr.cpp  reordertermitr.cpp  rmitr.cpp  scanitr.cpp  termitr.cpp
src/trident/kb/: cacheidx.cpp  dictmgmt.cpp  diffindex1.cpp  diffindex3.cpp  inserter.cpp  kb.cpp  kbconfig.cpp  loader.cpp  memoryopt.cpp  partial.cpp  permsorter.cpp  querier.cpp  updater.cpp  updatestats.cpp
src/trident/mining/: miner.cpp
src/trident/ml/: batch.cpp  distmul.cpp  faisswrapper.cpp  feedback.cpp  graddebug.cpp  hole.cpp  learner.cpp  main_ml.cpp  pairwiselearner.cpp  subgraphhandler.cpp  subgraphs.cpp  tester.cpp  transe.cpp
src/trident/model/: table.cpp
src/trident/server/: server.cpp
src/trident/sparql/: aggrhandler.cpp  hashjoinitr.cpp  joinplan.cpp  nesmeritr.cpp  plan.cpp  query.cpp  sparql.cpp  (+2 more)
tests/: cmpoutput.py  convertBinaryToTridentDB.cpp  makefile  ontotranse2trident.py  test_cache.cpp  test_comprstorage.cpp  test_dictionary_tree.cpp  test_generate.cpp  test_graph.cpp  test_hashfunctions.cpp  test_hashnumbers.cpp  test_httpclient.cpp  test_httpserver.cpp  test_index.cpp  test_insert2.cpp  test_insert3.cpp  test_insert4.cpp  test_insert6.cpp  test_insert8.cpp  test_insert_perm.cpp  test_insert_tree.cpp  test_insertdictionary.cpp  test_insertindex.cpp  test_insertlarge.cpp  test_intermediatetripledata.cpp  test_inv_dictionary_tree.cpp  test_io.cpp  test_joins.cpp  test_json.cpp  test_liststorage.cpp  test_loadmap.cpp  test_lru.cpp  test_lz4io.cpp  test_map.cpp  test_mergesort.cpp  test_multi.cpp  test_newcompress.cpp  test_number.cpp  test_number_flags.cpp  test_parallel_for.cpp  (+19 more)
webinterface/: index.html  link.html  main.css
win64/: trident.sln
win64/trident/: trident.vcxproj  trident.vcxproj.filters
win64/trident-core/: trident-core.vcxproj  trident-core.vcxproj.filters
win64/trident-sparql/: trident-sparql.vcxproj  trident-sparql.vcxproj.filters
(+69 files in other folders)
